--- a/package.json
+++ b/package.json
@@ -59,6 +59,7 @@
     "webpack-split-by-path": "0.1.0-beta.1"
   },
   "dependencies": {
+    "babel-runtime": "^6.23.0",
     "express": "^4.14.0",
     "material-ui": "^0.17.0",
     "react": "^15.4.2",
@@ -67,6 +68,7 @@
     "react-router": "^3.0.0",
     "react-tap-event-plugin": "^2.0.1",
     "redux": "^3.6.0",
+    "redux-form": "^6.7.0",
     "redux-saga": "^0.14.2"
   }
 }
