--- a/package.json
+++ b/package.json
@@ -67,7 +67,6 @@
     "react-redux": "^5.0.2",
     "react-router": "^3.0.0",
     "redux": "^3.6.0",
-    "redux-form": "^6.7.0",
-    "redux-saga": "^0.14.2"
+    "redux-thunk": "^2.2.0"
   }
 }
